ui: show 匹配 column on mobile

--- a/agent-dashboard.html
+++ b/agent-dashboard.html
@@ -614,10 +614,9 @@ header{display:flex;align-items:center;justify-content:space-between;padding:16p
   .agent-stat-value{font-size:1.6rem}
   .agent-stat{padding:12px 14px}
   .agent-session-tokens,.agent-session-label{display:none}
-  /* Mobile: hide 任务(2), Tokens(5), 匹配(8); keep 频道/模型/消息/花费/$/条 */
+  /* Mobile: hide 任务(2), Tokens(5); keep 频道/模型/消息/花费/$/条/匹配 */
   .sessions-table th:nth-child(2),.sessions-table td:nth-child(2),
-  .sessions-table th:nth-child(5),.sessions-table td:nth-child(5),
-  .sessions-table th:nth-child(8),.sessions-table td:nth-child(8){display:none}
+  .sessions-table th:nth-child(5),.sessions-table td:nth-child(5){display:none}
   .sessions-table{font-size:.72rem}
   .sess-name{max-width:100px}
 }
